# credit-risk-intelligence

./: README.md  docker-compose.yml
agents/: .env  Dockerfile  Dockerfile.orchestrator  requirements.txt
agents/interaction/: chat_agent.py  main.py  prompts.py  scenario_agent.py  sme_agent.py
agents/orchestrator/: agent.py
agents/shared/: config.py  mcp_client.py
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: activities.py  news.py  portfolio.py  websocket.py
backend/app/models/: activity.py  news.py  sme.py  task.py
backend/app/services/: chat_service.py  portfolio_service.py  risk_engine.py  scenario_service.py  task_service.py
backend/data/: alerts.csv
backend/services/: activity_service.py  alert_service.py  chat_service.py  event_severity_weights.py  news_service.py  portfolio_service.py  risk_engine.py  scenario_job_service.py  scenario_service.py  task_service.py
data/: activities.csv  company_info.csv  financial_data.csv  news_events.csv  smes.csv  tasks.csv  web_traffic.csv
docs/: DOCKER_DEPLOYMENT_GUIDE.md  complete_implementation_summary.md  credit_risk_methodology.md  implementation_guide.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
mcp-servers/: Dockerfile  Dockerfile.companies-house  Dockerfile.financial  Dockerfile.linkedin  Dockerfile.mcp-base  Dockerfile.news  Dockerfile.payment  Dockerfile.web-traffic  main.py  requirements.txt
(+56 files in other folders)
