[tool.poetry]
name = "foresight-ai-backend"
version = "1.0.0"
description = "Foresight AI Backend API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pandas = "^2.2.0"  # ✅ ADD - CRITICAL for CSV processing

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"